src/styles/partials/_request.scss
@mixin button {
  @include font;
  display: block;
  width: 8.25rem;
  height: 2.5625rem;
  margin-top: 1.5rem;
  margin-bottom: 2rem;
  background: $primary;
  border-radius: 0.125rem;
  border: $primary;
  line-height: 2.5625rem;
  text-align: center;
  color: $white;
  cursor: pointer;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

.requestcover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  min-height: 26.5625rem;
  top: 0rem;
  background: rgba(13, 41, 56, 0.8);
  z-index: 5;
  cursor: default;

  ::-webkit-scrollbar {
    width: 0.5625rem;
  }

  ::-webkit-scrollbar-track {
    background: #1a4d68;
  }

  ::-webkit-scrollbar-thumb {
    background: #236385;
    border-radius: 1.125rem;
  }

  input[type='text']:disabled {
    background: $white;
  }
}

.request {
  @include position;
  width: 86.88%;
  height: 95.12%;
  left: 6.56%;
  top: 2.44%;
  background: $white;
  box-shadow: 0rem 0.25rem 0.25rem rgba($black, 0.25);
  overflow-y: auto;
  border-radius: 0.125rem;
  scrollbar-width: 0rem;

  ::placeholder {
    color: rgba($font-color, 0.2);
  }
}

.request-- {
  &close {
    position: absolute;
    width: 1.264375rem;
    height: 1.264375rem;
    right: 0%;
    top: 0%;
    margin-right: 1.625rem;
    margin-top: 1.375rem;
  }

  &loader {
    margin-left: 0.25rem;
    animation: rotation 1s infinite linear;
  }

  &heading {
    @include font;
    width: 7.25rem;
    height: 2.375rem;
    align-self: center;
    margin-top: 1.1875rem;
    font-size: 2rem;
    line-height: 2.3125rem;
    color: $font-color;
  }

  &underline {
    width: 5rem;
    height: 0.05%;
    align-self: center;
    margin-top: 0.625rem;
    border: 0.0425rem solid $primary;
  }

  &instructions {
    @include font;
    width: 63.34%;
    height: auto;
    margin-left: 17%;
    margin-top: 2.125rem;
    background: rgba($primary, 0.275);
    border-radius: 0.125rem;
    line-height: 1.5rem;
    text-align: justify;
    padding: 1rem 1.5rem 1rem 1.5rem;
  }

  &type {
    @include font;
    width: 7rem;
    height: 1.1875rem;
    margin-top: 2.25rem;
    margin-left: 18%;
  }

  &filebutton- {
    &inactive {
      @include font;
      width: 7.5625rem;
      height: 2.25rem;
      margin-left: 18%;
      margin-top: 1rem;
      background: $white;
      border: none;
      border-bottom: 0.25rem solid rgba($primary, 0.2);
      line-height: 0.625rem;
    }

    &active {
      @include font;
      width: 7.5625rem;
      height: 2.25rem;
      margin-left: 18%;
      margin-top: 1rem;
      background: rgba($primary, 0.25);
      border: none;
      border-bottom: 0.25rem solid $primary;
      line-height: 0.625rem;
    }
  }

  &coursebutton- {
    &inactive {
      @include font;
      width: 7.5625rem;
      height: 2.25rem;
      background: $white;
      border: none;
      border-bottom: 0.2rem solid rgba($primary, 0.2);
      line-height: 0.625rem;
    }

    &active {
      @include font;
      width: 7.5625rem;
      height: 2.25rem;
      background: rgba($primary, 0.25);
      border: none;
      border-bottom: 0.25rem solid $primary;
      line-height: 0.625rem;
    }
  }

  &form-file {
    display: flex;
    flex-direction: column;
    width: 67%;
    height: 40.5%;
    margin-left: 19%;
  }

  &form-course {
    display: flex;
    flex-direction: column;
    width: 66.5%;
    height: 30.328%;
    margin-left: 19%;
  }

  &button-file,
  &button-course,
  &button-file_requesting,
  &button-file_requested {
    @include button;
  }

  &button-file,
  &button-course {
    width: 5.875rem;
  }

  &confirmation {
    margin-top: 1.5rem;

    &-text {
      @include font;
      margin-left: 0.5rem;
      color: $success;
      opacity: 0.8;
    }

    &-activity {
      @include font;
      margin-left: 0.75rem;
    }
  }
}

.file-- {
  &department {
    @include font;
    margin-top: 1rem;
    line-height: 1.3125rem;
    text-align: justify;

    &-select {
      @include input;
    }

    &-select:disabled {
      @include disabled;
    }
  }

  &course {
    @include font;
    margin-top: 1.5rem;
    line-height: 1.3125rem;
    text-align: justify;
    color: rgba($font-color, 0.2);

    &-select {
      @include input;
    }

    &-select:disabled {
      @include disabled;
    }
  }

  &material {
    @include font;
    margin-top: 1.5rem;
    text-align: justify;
    color: rgba($font-color, 0.2);

    &material--container {
      position: relative;
    }

    &_tut,
    &_books,
    &_notes,
    &_exam {
      position: relative;
      height: 0.9375rem;
      width: 0.9375rem;
    }

    &_tut {
      top: 0;
      margin-top: 0.5625rem;
    }
    &_books {
      top: -2.125rem;
      margin-left: 18%;
    }
    &_notes {
      top: -4.35rem;
      margin-left: 36%;
    }
    &_exam {
      top: -6.575rem;
      margin-left: 54%;
    }
  }

  &name {
    @include font;
    margin-top: -6.5rem;
    line-height: 1.3125rem;
    text-align: justify;
    color: rgba($font-color, 0.2);

    &-input {
      @include input;
      width: 29.9375rem;
      height: 2.25rem;
    }

    &-input:disabled {
      @include disabled;
      padding: 0.5625rem 0.75rem 0.5rem;
    }
  }
}

.course-- {
  &department {
    @include font;
    margin-top: 1.6875rem;
    line-height: 1.3125rem;
    text-align: justify;

    &-input {
      @include input;
    }
  }

  &course {
    @include font;
    margin-top: 1rem;
    line-height: 1.3125rem;
    text-align: justify;
    color: rgba($font-color, 0.2);

    &-input {
      @include input;
    }

    &-input:disabled {
      @include disabled;
      padding: 0.5625rem 0.75rem 0.5rem;
      background-color: $white;
    }
  }

  &id {
    @include font;
    margin-top: 1.5rem;
    text-align: justify;
    color: rgba($font-color, 0.2);

    &-input {
      @include input;
      width: 5.375rem;
    }

    &-input:disabled {
      @include disabled;
      padding: 0.5625rem 0.75rem 0.5rem;
    }
  }
}

.tut,
.books,
.notes,
.exam {
  @include font;
  width: 3.9375rem;
  height: 1.1875rem;
  position: relative;
  line-height: 1.375rem;
  color: rgba($font-color, 0.2);
}

.tut {
  top: -0.9375rem;
  margin-left: 5%;
}

.books {
  top: -3.0625rem;
  margin-left: 23%;
}

.notes {
  top: -5.2875rem;
  margin-left: 41%;
}

.exam {
  top: -7.6125rem;
  margin-left: 59%;
}

button:focus {
  outline: none;
}

button:hover,
.request--close:hover {
  cursor: pointer;
}

